manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-deployment
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      imagePullPolicy: Always
      securityContext:
        runAsUser: 0
      containers:
      - name: gitea
        image: quay.io/bparees/gitea:latest
        ports:
        - containerPort: 3000
          name: gitea-http
        - containerPort: 22
          name: gitea-ssh
#        volumeMounts:
#        - mountPath: /data
#          name: git-data
#      volumes:
#      - name: git-data
#        emptyDir: {}
