manifests/service-http.yaml
kind: Service
apiVersion: v1
metadata:
  name: gitea-http
spec:
  selector:
    app: gitea
  ports:
  - name: gitea-http
    port: 3000
    targetPort: gitea-http
