manifests/service-ssh.yaml
kind: Service
apiVersion: v1
metadata:
  name: gitea-ssh
spec:
  selector:
    app: gitea
  ports:
  - name: gitea-ssh
    port: 2222
    targetPort: gitea-ssh
