manifests/route-http.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: gitea-http
  spec:
    port:
      targetPort: gitea-http
    subdomain: ""
    to:
      kind: Service
      name: gitea-http
      weight: 100
    wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
